--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "node generate.js"
     },
-    "devDependencies": {
+    "dependencies": {
         "highlight.js": "^11.10.0",
         "markdown-it": "^14.1.0"
     }
