--- a/action/10/test.yml
+++ b/action/10/test.yml
@@ -4,10 +4,17 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x, 19.x, 20.x]
 
     steps:
       - name: Check out code
@@ -16,12 +23,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "20"
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: npm install
 
-      - name: Run application
-        run: node app.js
-        env:
-          API_KEY: ${{ secrets.API_KEY }}
+      - name: Run tests
+        run: npm test
