--- a/action/21/build-multi-platform.yml
+++ b/action/21/build-multi-platform.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest # Linux 作業系統作為主要運行平台
-
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.9] # 可以根據需要調整 Python 版本
+        python-version: [3.11]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout repository
@@ -31,11 +31,9 @@ jobs:
       - name: Build application
         run: |
           pyinstaller --onefile hello.py
-        env:
-          PLATFORM: ${{ matrix.os }}
 
       - name: Archive artifacts
         uses: actions/upload-artifact@v3
         with:
           name: hello-executable-${{ matrix.os }}
-          path: dist/hello${{ matrix.os == 'windows-latest' && '.exe' || '' }} # 根據平台確定擴展名
+          path: dist/hello${{ matrix.os == 'windows-latest' && '.exe' || '' }}
