--- a/.github/workflows/autocorrect.yml
+++ b/.github/workflows/autocorrect.yml
@@ -16,15 +16,17 @@ jobs:
 
             # Install Node.js and Yarn
             - name: Set up Node.js
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
                   node-version: "20"
 
+            # Install dependencies (including autocorrect-node)
+            - name: Install dependencies
+              run: yarn add autocorrect
+
             # Run autocorrect fix
             - name: Run autocorrect
-              run: |
-                  rm -rf .git/hooks
-                  npx autocorrect --fix
+              run: autocorrect --fix
 
             # Add changes excluding package.json
             - name: Add changes except package.json
