--- a/.github/workflows/autocorrect.yml
+++ b/.github/workflows/autocorrect.yml
@@ -28,7 +28,7 @@ jobs:
 
             # Run autocorrect fix
             - name: Run autocorrect
-              run: autocorrect --fix
+              run: yarn autocorrect --fix
 
             # Add changes excluding package.json
             - name: Add changes except package.json
