--- a/.github/workflows/autocorrect.yml
+++ b/.github/workflows/autocorrect.yml
@@ -32,9 +32,11 @@ jobs:
             # Run autocorrect fix
             - name: Run autocorrect
               run: yarn autocorrect --fix
+              continue-on-error: true
 
             - name: Run prettier
               run: yarn prettier --write .
+              continue-on-error: true
 
             # Add changes excluding package.json
             - name: Add changes except package.json
