--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "start": "node emblog/server.js"
     },
     "dependencies": {
+        "autocorrect-node": "^2.13.0",
         "highlight.js": "^11.10.0",
         "markdown-it": "^14.1.0",
+        "prettier": "^3.3.3",
         "sharp": "^0.33.5"
     }
 }
