--- a/.github/workflows/autocorrect.yml
+++ b/.github/workflows/autocorrect.yml
@@ -45,18 +45,20 @@ jobs:
                   git config --global user.name "Edit-Mr"
                   git config --global user.email "info@elvismao.com"
                   git add .
-                  git restore package.json
+                  git reset package.json
+                  git reset .github
 
             # Commit and push changes
             - name: Commit and push changes
               run: |
                   if [ -n "$(git status --porcelain)" ]; then
-                      git remote set-url origin https://x-access-token:${{ secrets.WORKFLOW_TOKEN }}@github.com/${{ github.repository }}
                       git commit -m "噢多麼單純的一首詩 怎麼會 怎麼會 忘記加空白" -m "-草東沒有派對《爛泥》"
                       git push origin main
                   else
                       echo "No changes to commit"
                   fi
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     blankSpace:
         needs: autocorrect # This ensures replace_text runs after autocorrect
         runs-on: ubuntu-latest
@@ -74,10 +76,13 @@ jobs:
                   git config --global user.name "github-actions"
                   git config --global user.email "actions@github.com"
                   git add .
+                  # not .github folder
+                  git reset .github
                   if git diff --staged --quiet; then
                     echo "No changes"
                   else
-                    git remote set-url origin https://x-access-token:${{ secrets.WORKFLOW_TOKEN }}@github.com/${{ github.repository }}
                     git commit -m "空間是一格半 誰也出不去 幾寸也不滿意 思想是循環 溫飽思淫慾" -m "-草東沒有派對《空》"
                     git push
                   fi
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
