autorrect fix and minor fixes

--- a/.autocorrectrc
+++ b/.autocorrectrc
@@ -21,11 +21,11 @@ rules:
     # Fullwidth punctuations to halfwidth in english.
     halfwidth-punctuation: 1
     # Spellcheck
-    spellcheck: 2
+    spellcheck: 0
 # Enable or disable in a specific context
 context:
     # Enable or disable to format codeblock in Markdown or AsciiDoc etc.
-    codeblock: 1
+    codeblock: 0
 textRules:
     # Config special rules for some texts
     # For example, if we wants to let "Hello你好" just warning, and "Hi你好" to ignore
@@ -41,10 +41,10 @@ spellcheck:
     # Correct Words (Case insensitive) for by Spellcheck
     words:
         - GitHub
+        - Github = GitHub
         - App Store
         # This means "appstore" into "App Store"
         - AppStore = App Store
-        - 毛哥EM = 毛哥EM
         - Git
         - Node.js
         - nodejs = Node.js
