--- a/.github/workflows/autocorrect.yml
+++ b/.github/workflows/autocorrect.yml
@@ -10,6 +10,8 @@ jobs:
         name: 🗿盤古之白
         continue-on-error: true
         runs-on: ubuntu-latest
+        permissions:
+          actions: write
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
@@ -60,6 +62,8 @@ jobs:
         name: ☁️毛哥EM沒有空白
         needs: autocorrect
         runs-on: ubuntu-latest
+        permissions:
+          actions: write
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
