我上課 不專心 不在意 是因為 yarn 2.0 了 #36

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "installCommand": "yarn install --production",
+    "installCommand": "yarn workspaces focus --production",
     "buildCommand": "yarn build",
     "outputDirectory": "dist",
     "trailingSlash": false,
