--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -43,6 +43,10 @@ server {
         try_files /index.html =404;
     }
 
+    location /search {
+        try_files /index.html =404;
+    }
+
     # 服務其他靜態檔案
     location / {
         try_files $uri $uri/ /index.html;
