--- a/vercel.json
+++ b/vercel.json
@@ -5,28 +5,28 @@
     "trailingSlash": false,
     "rewrites": [
         { "source": "/tag/:slug*", "destination": "/index.html" },
+        { "source": "/search", "destination": "/index.html" },
         { "source": "/category/:slug*", "destination": "/index.html" }
     ],
     "redirects": [
-        { "source": "/about/", "destination": "/p/about" },
+        { "source": "/about", "destination": "/p/about", "permanent": true },
         {
             "source": "/post/:slug*",
-            "destination": "/p/:slug*"
-        },
-        {
-            "source": "/post/:slug*",
-            "destination": "/p/:slug*"
+            "destination": "/p/:slug*",
+            "permanent": true
         },
         {
             "source": "/posts/:slug*",
-            "destination": "/p/:slug*"
+            "destination": "/p/:slug*",
+            "permanent": true
         },
         {
             "source": "/series/:slug*",
-            "destination": "/category/:slug*"
+            "destination": "/category/:slug*",
+            "permanent": true
         },
-        { "source": "/tag/", "destination": "/" },
-        { "source": "/category/", "destination": "/" },
-        { "source": "/p/", "destination": "/" }
+        { "source": "/tag", "destination": "/", "permanent": true },
+        { "source": "/category", "destination": "/", "permanent": true },
+        { "source": "/p", "destination": "/", "permanent": true }
     ]
 }
