Remove public files not using
Co-authored-by: Riley Ho <riley@rileychh.dev>

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "scripts": {
         "build": "node emblog/generate.js",
-        "start": "node emblog/server.js"
+        "dev": "node emblog/server.js"
     },
     "dependencies": {
         "highlight.js": "^11.10.0",
