--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "1.0.0",
     "scripts": {
         "build": "node emblog/generate.js",
-        "dev": "node emblog/server.js"
+        "start": "node emblog/server.js",
+        "dev": "CACHE=true SKIPPOST=true node emblog/server.js"
     },
     "dependencies": {
         "highlight.js": "^11.10.0",
