--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "sharp": "^0.33.5"
     },
     "devDependencies": {
+        "@types/highlight.js": "^10.1.0",
         "autocorrect-node": "^2.13.0",
-        "prettier": "^3.4.2"
+        "prettier": "^3.4.2",
+        "typescript": "^5.7.3"
     }
 }
