refactor: from yarn to pnpm

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-    "installCommand": "yarn install --production",
-    "buildCommand": "yarn build",
+    "installCommand": "pnpm install --prod",
+    "buildCommand": "pnpm build",
     "outputDirectory": "dist",
     "trailingSlash": false,
     "rewrites": [
