--- a/.github/workflows/autocorrect.yml
+++ b/.github/workflows/autocorrect.yml
@@ -24,15 +24,14 @@ jobs:
                   git config pull.rebase true
                   git pull
                   corepack enable
-                  yarn add autocorrect-node
-                  yarn add prettier
+                  pnpm i -D
 
             - name: Run autocorrect
-              run: yarn autocorrect --fix
+              run: pnpm autocorrect --fix
               continue-on-error: true
 
             - name: Run prettier
-              run: yarn prettier --write .
+              run: pnpm prettier --write .
               continue-on-error: true
 
             - name: Add changes except package.json
