--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "name": "emtech",
-    "packageManager": "yarn@4.7.0",
     "version": "1.0.0",
     "scripts": {
         "build": "node emblog/generate.js",
@@ -16,5 +15,11 @@
     "devDependencies": {
         "autocorrect-node": "^2.13.0",
         "prettier": "^3.5.3"
+    },
+    "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b",
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "sharp"
+        ]
     }
 }
