--- a/.github/workflows/markdown-validation.yml
+++ b/.github/workflows/markdown-validation.yml
@@ -17,6 +17,6 @@ jobs:
             - name: Validate Markdown Files
               shell: /usr/bin/bash -e {0}
               run: |
-                  ./winston-validation.sh
-                  ./markdown-validation.sh
+                  .github/workflows/winston-validation.sh
+                  .github/workflows/markdown-validation.sh
 
