--- a/.github/workflows/markdown-validation.yml
+++ b/.github/workflows/markdown-validation.yml
@@ -17,7 +17,7 @@ jobs:
               run: |
                   chmod +x .github/workflows/markdown-validation.sh
                   .github/workflows/markdown-validation.sh
-            - name: Validate Winson
-              run: |
-                  chmod +x .github/workflows/winston-validation.sh
-                  .github/workflows/winston-validation.sh
+            # - name: Validate Winson
+            #   run: |
+            #       chmod +x .github/workflows/winston-validation.sh
+            #       .github/workflows/winston-validation.sh
