--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-    "name": "emblog",
+    "name": "emtech",
     "compatibility_date": "2024-04-01",
     "assets": {
         "directory": "./dist"
